chore: re-style

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -149,10 +149,10 @@
         <div class="byline">multiplayer race</div>
       </div>
       <div class="stat">
-        <label>Score</label>
+
         <p id="score">0</p>
       </div>
-      <table id="controls">
+      <!-- <table id="controls">
         <tr>
           <td>Up:</td>
           <td>Jump</td>
@@ -169,7 +169,7 @@
           <td>p:</td>
           <td>Pause</td>
         </tr>
-      </table>
+      </table> -->
       <table id="ranks"></table>
       <div class="animate-flicker" id="variable-content">Waiting for race to start...</div>
     </div>
