--- a/singleplayer-old.html
+++ b/singleplayer-old.html
@@ -54,15 +54,12 @@
     </button>
 
     <div class="panel">
-      <div class="game-title">
-        <div class="title">boxy run</div>
-        <div class="byline">single player</div>
-      </div>
+
       <div class="stat">
-        <label>Score</label>
+
         <p id="score">0</p>
       </div>
-      <table id="controls">
+      <!-- <table id="controls">
         <tr>
           <td>Up:</td>
           <td>Jump</td>
@@ -79,14 +76,9 @@
           <td>p:</td>
           <td>Pause</td>
         </tr>
-      </table>
+      </table> -->
       <table id="ranks"></table>
       <div class="animate-flicker" id="variable-content">Press any button to begin</div>
-      <div style="margin-top: 2em; text-align: center">
-        <a href="index.html" style="color: #333; text-decoration: none; font-size: 0.9em"
-          >← Back to Menu</a
-        >
-      </div>
     </div>
     <div id="world"></div>
   </body>
