--- a/singleplayer.html
+++ b/singleplayer.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/audio-manager.js"></script>
     <script type="text/javascript" src="js/helpers.js"></script>
     <script type="text/javascript" src="js/object.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
+    <script type="module" src="js/game.js"></script>
     <link href="style.css" rel="stylesheet" />
     <style>
       /* Sound Toggle Button */
