chore: clean up unused code and improve file organization

--- a/lobby.html
+++ b/lobby.html
@@ -588,15 +588,15 @@
                 <img src="${hostAvatarUrl}" alt="${room.hostName}" class="player-avatar" />
                 <div>
                   <div class="room-code">${room.id}</div>
-                  <div class="room-host">Host: ${room.hostName}</div>
-                </div>
-              </div>
-              <div class="room-players">
-                <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                  <div class="room-players">
+                <svg width="20" height="20" fill="#FFFFFF" viewBox="0 0 24 24">
                   <path d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"/>
                 </svg>
                 ${room.playerCount}/${room.maxPlayers}
               </div>
+                </div>  
+              </div>
+
             `;
             roomList.appendChild(roomDiv);
           });
