--- a/multiplayer.html
+++ b/multiplayer.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="js/three.min.js"></script>
   <script type="text/javascript" src="js/audio-manager.js"></script>
   <script type="text/javascript" src="js/network.js"></script>
-  <script type="text/javascript" src="js/game-multiplayer.js"></script>
+  <script type="module" src="js/game-multiplayer.js"></script>
   <script type="text/javascript" src="js/object.js"></script>
   <link href="style.css" rel="stylesheet" />
   <style>
