--- a/test.html
+++ b/test.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>History Sufers | Single Player</title>
-     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
+
     <script type="importmap">
       {
         "imports": {
@@ -15,25 +16,20 @@
       }
     </script>
     <script type="text/javascript" src="js/audio-manager.js"></script>
-    <script type="module" src="js/helpers.js"></script>
-    <script type="module" src="js/object.js"></script>
-    <script type="module" src="js/game.js"></script>
+    <script type="module" src="scripts/utils.js"></script>
+    <script type="module" src="js/game-old.js"></script>
     <link href="style.css" rel="stylesheet" />
     <link href="./styles/sound_toggle.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Sound Toggle Button -->
-    <button id="sound-toggle" class="sound-toggle" title="Toggle Sound">
-      🔊
-    </button>
+    <button id="sound-toggle" class="sound-toggle" title="Toggle Sound">🔊</button>
 
     <div class="panel">
-
       <div class="stat">
-
         <p id="score">0</p>
       </div>
-      </table>
+
       <table id="ranks"></table>
       <div class="animate-flicker" id="variable-content">Press any button to begin</div>
     </div>
