feat: extract tree to showcase

--- a/object-showcase.html
+++ b/object-showcase.html
@@ -268,7 +268,7 @@
         }
       }
     </script>
-    <script src="js/helpers.js"></script>
+    <script type="module" src="js/helpers.js"></script>
     <script type="module" src="js/object.js"></script>
     <script type="module" src="scripts/showcase.js"></script>
   </body>
