Add network strategy implementation for single and multiplayer modes
- Created a base NetworkStrategy class with methods for game lifecycle events.
- Implemented SinglePlayerStrategy for single-player mode without network interactions.
- Implemented MultiplayerStrategy for multiplayer mode with network event handling and opponent management.
- Updated singleplayer.html to include a more comprehensive UI with stats panel, score display, and controls.
- Enhanced styling for various UI components, including stat bars and notifications.

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="js/audio-manager.js"></script>
   <script type="text/javascript" src="js/network.js"></script>
   <script type="module" src="js/game-multiplayer.js"></script>
+  <script type="module" src="scripts/network-strategy.js"></script>
   <script type="module" src="js/object.js"></script>
   <link href="style.css" rel="stylesheet" />
   <link href="./styles/sound_toggle.css" rel="stylesheet" />
