--- a/singleplayer.html
+++ b/singleplayer.html
@@ -1,42 +1,549 @@
 <!doctype html>
 <html>
-  <head>
-    <title>History Sufers | Single Player</title>
-     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
-      rel="stylesheet"
-    />
-    <script type="importmap">
+
+<head>
+  <title>History Sufers | Single Player</title>
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet" />
+  <script type="importmap">
       {
         "imports": {
           "three": "https://unpkg.com/three@0.180.0/build/three.module.js"
         }
       }
     </script>
-    <script type="text/javascript" src="js/audio-manager.js"></script>
-    <script type="module" src="js/helpers.js"></script>
-    <script type="module" src="js/object.js"></script>
-    <script type="module" src="js/game.js"></script>
-    <link href="style.css" rel="stylesheet" />
-    <link href="./styles/sound_toggle.css" rel="stylesheet" />
-  </head>
-  <body>
-    <!-- Sound Toggle Button -->
-    <button id="sound-toggle" class="sound-toggle" title="Toggle Sound">
-      🔊
-    </button>
+  <script type="text/javascript" src="js/audio-manager.js"></script>
+  <script type="module" src="js/helpers.js"></script>
+  <script type="module" src="js/object.js"></script>
+  <script type="module" src="js/game.js"></script>
+  <link href="style.css" rel="stylesheet" />
+  <link href="./styles/sound_toggle.css" rel="stylesheet" />
 
-    <div class="panel">
+  <style>
+    /* Stats Panel - Left Side */
+    .stats-panel {
+      position: absolute;
+      top: 200px;
+      left: 20px;
+      /* background: rgba(0, 0, 0, 0.75); */
+      backdrop-filter: blur(10px);
+      padding: 1.2em;
+      border-radius: 15px;
+      min-width: 280px;
+      /* box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4); */
+      border: 2px solid rgba(255, 255, 255, 0.1);
+      z-index: 999;
+    }
 
-      <div class="stat">
+    .stats-panel h3 {
+      margin: 0 0 1em 0;
+      font-family: 'Playfair Display', serif;
+      font-size: 1.3em;
+      text-align: center;
+      color: #fff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      letter-spacing: 1px;
+    }
 
-        <p id="score">0</p>
+    .stat-item {
+      margin-bottom: 1em;
+    }
+
+    .stat-label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 5px;
+      font-size: 0.95em;
+      font-weight: 600;
+    }
+
+    .stat-label-left {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      color: #fff;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    }
+
+    .stat-label-right {
+      color: #fff;
+      font-size: 1em;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    }
+
+    .stat-bar-container {
+      width: 100%;
+      height: 24px;
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 12px;
+      overflow: hidden;
+      border: 2px solid rgba(255, 255, 255, 0.2);
+      position: relative;
+    }
+
+    .stat-bar-fill {
+      height: 100%;
+      transition:
+        width 0.4s ease,
+        background 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.75em;
+      font-weight: bold;
+      color: white;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+      position: relative;
+    }
+
+    .stat-bar-fill::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 50%;
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), transparent);
+      border-radius: 12px 12px 0 0;
+    }
+
+    .stat-bar-trust {
+      background: linear-gradient(90deg, #4caf50, #66bb6a);
+    }
+
+    .stat-bar-trust.low {
+      background: linear-gradient(90deg, #f44336, #ef5350);
+    }
+
+    .stat-bar-trust.medium {
+      background: linear-gradient(90deg, #ff9800, #ffa726);
+    }
+
+    .stat-bar-justice {
+      background: linear-gradient(90deg, #2196f3, #42a5f5);
+    }
+
+    .stat-bar-justice.low {
+      background: linear-gradient(90deg, #f44336, #ef5350);
+    }
+
+    .stat-bar-justice.medium {
+      background: linear-gradient(90deg, #ff9800, #ffa726);
+    }
+
+    .stat-bar-unity {
+      background: linear-gradient(90deg, #ff9800, #ffa726);
+    }
+
+    .stat-bar-unity.low {
+      background: linear-gradient(90deg, #f44336, #ef5350);
+    }
+
+    .stat-bar-unity.medium {
+      background: linear-gradient(90deg, #ffb74d, #ffca28);
+    }
+
+    .stat-icon {
+      font-size: 1.2em;
+      filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
+    }
+
+    /* Score Display */
+    .score-display {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      /* background: rgba(0, 0, 0, 0.8); */
+      backdrop-filter: blur(10px);
+      padding: 1em 1.5em;
+      border-radius: 15px;
+      /* box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4); */
+      /* border: 2px solid rgba(255, 215, 0, 0.3); */
+      z-index: 999;
+    }
+
+    .score-display label {
+      display: block;
+      color: #ffd700;
+      font-size: 0.9em;
+      font-weight: 600;
+      margin-bottom: 5px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    }
+
+    .score-display p {
+      margin: 0;
+      color: #fff;
+      font-size: 2.5em;
+      font-weight: bold;
+      font-family: 'Playfair Display', serif;
+      text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
+      letter-spacing: 1px;
+    }
+
+    /* Multiplayer HUD - Bottom Right */
+    .multiplayer-hud {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(0, 0, 0, 0.75);
+      backdrop-filter: blur(10px);
+      padding: 1em;
+      border-radius: 15px;
+      min-width: 250px;
+      max-width: 350px;
+      max-height: 300px;
+      overflow-y: auto;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+      border: 2px solid rgba(255, 255, 255, 0.1);
+      z-index: 999;
+    }
+
+    .multiplayer-hud h3 {
+      margin: 0 0 0.7em 0;
+      font-family: 'Playfair Display', serif;
+      font-size: 1.1em;
+      text-align: center;
+      color: #ffd700;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+      letter-spacing: 1px;
+    }
+
+    .player-score-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.6em;
+      margin: 0.4em 0;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 8px;
+      font-size: 0.9em;
+      gap: 0.5em;
+      transition: all 0.2s ease;
+    }
+
+    .player-score-item:hover {
+      background: rgba(255, 255, 255, 0.15);
+      transform: translateX(-3px);
+    }
+
+    .player-score-item.self {
+      background: rgba(33, 150, 243, 0.3);
+      border-left: 3px solid #2196f3;
+      font-weight: bold;
+    }
+
+    .player-score-avatar {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      flex-shrink: 0;
+      border: 2px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .player-score-name {
+      color: #fff;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    }
+
+    .player-score-value {
+      color: #ffd700;
+      font-weight: 700;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    }
+
+    /* Game Title Panel */
+    .panel {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.85);
+      backdrop-filter: blur(15px);
+      padding: 2em;
+      border-radius: 20px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
+      border: 3px solid rgba(255, 215, 0, 0.4);
+      z-index: 1000;
+      max-width: 500px;
+    }
+
+    .game-title .title {
+      font-family: 'Playfair Display', serif;
+      font-size: 3em;
+      color: #ffd700;
+      text-align: center;
+      text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);
+      margin-bottom: 0.2em;
+      letter-spacing: 3px;
+    }
+
+    .game-title .byline {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.2em;
+      color: #fff;
+      text-align: center;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+      margin-bottom: 1em;
+      letter-spacing: 2px;
+    }
+
+    #controls {
+      color: #fff;
+      margin: 1.5em auto;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    }
+
+    #controls td {
+      padding: 0.5em 1em;
+    }
+
+    #variable-content {
+      color: #ffd700;
+      text-align: center;
+      font-size: 1.2em;
+      margin-top: 1em;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    }
+
+    /* Toast animations */
+    @keyframes slideInRight {
+      from {
+        transform: translateX(100%);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+
+    .animate-slide-in-right {
+      animation: slideInRight 0.4s ease-out;
+    }
+
+    #toast-container {
+      position: fixed;
+      max-width: 400px;
+      padding: 1rem;
+      z-index: 1100;
+      pointer-events: none;
+    }
+
+    /* Scrollbar styling */
+    .multiplayer-hud::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    .multiplayer-hud::-webkit-scrollbar-track {
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 10px;
+    }
+
+    .multiplayer-hud::-webkit-scrollbar-thumb {
+      background: rgba(255, 215, 0, 0.5);
+      border-radius: 10px;
+    }
+
+    .multiplayer-hud::-webkit-scrollbar-thumb:hover {
+      background: rgba(255, 215, 0, 0.7);
+    }
+
+    /* Pulsing animation for low stats */
+    @keyframes pulse-red {
+
+      0%,
+      100% {
+        box-shadow: 0 0 5px rgba(244, 67, 54, 0.5);
+      }
+
+      50% {
+        box-shadow: 0 0 20px rgba(244, 67, 54, 1);
+      }
+    }
+
+    .stat-bar-container.critical {
+      animation: pulse-red 1.5s ease-in-out infinite;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Sound Toggle Button -->
+  <button id="sound-toggle" class="sound-toggle" title="Toggle Sound">🔊</button>
+
+  <!-- Stats Panel (Left Side) -->
+  <div class="stats-panel" id="statsPanel">
+    <h3>ĐỘ DÂN CHỦ</h3>
+
+    <div class="stat-item">
+      <div class="stat-label">
+        <span class="stat-label-left">
+          <span class="stat-icon">🤝</span>
+          <span>Niềm Tin</span>
+        </span>
+        <span class="stat-label-right" id="trust-value">50/100</span>
       </div>
-      </table>
-      <table id="ranks"></table>
-      <div class="animate-flicker" id="variable-content">Press any button to begin</div>
+      <div class="stat-bar-container" id="trust-container">
+        <div class="stat-bar-fill stat-bar-trust" id="trust-bar" style="width: 50%"></div>
+      </div>
     </div>
-    <div id="world"></div>
-  </body>
+
+    <div class="stat-item">
+      <div class="stat-label">
+        <span class="stat-label-left">
+          <span class="stat-icon">⚖️</span>
+          <span>Công Bằng</span>
+        </span>
+        <span class="stat-label-right" id="justice-value">50/100</span>
+      </div>
+      <div class="stat-bar-container" id="justice-container">
+        <div class="stat-bar-fill stat-bar-justice" id="justice-bar" style="width: 50%"></div>
+      </div>
+    </div>
+
+    <div class="stat-item">
+      <div class="stat-label">
+        <span class="stat-label-left">
+          <span class="stat-icon">🤜🤛</span>
+          <span>Đoàn Kết</span>
+        </span>
+        <span class="stat-label-right" id="unity-value">50/100</span>
+      </div>
+      <div class="stat-bar-container" id="unity-container">
+        <div class="stat-bar-fill stat-bar-unity" id="unity-bar" style="width: 50%"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Score Display (Top Right) -->
+  <div class="score-display">
+    <label>SCORE</label>
+    <p id="score">0</p>
+  </div>
+
+  <!-- Game Start Panel (Center) -->
+  <div class="panel" id="gamePanel">
+    <div class="game-title">
+      <div class="title">HISTORY SURFERS</div>
+      <div class="byline">vietnam's path to independence</div>
+    </div>
+    <table id="controls">
+      <tr>
+        <td><strong>↑</strong></td>
+        <td>Jump</td>
+      </tr>
+      <tr>
+        <td><strong>←</strong></td>
+        <td>Left lane</td>
+      </tr>
+      <tr>
+        <td><strong>→</strong></td>
+        <td>Right lane</td>
+      </tr>
+      <tr>
+        <td><strong>P</strong></td>
+        <td>Pause</td>
+      </tr>
+    </table>
+    <div class="animate-flicker" id="variable-content">Press any key to start...</div>
+  </div>
+
+  <!-- Toast Notification Container -->
+  <!-- <div id="toast-container" class="absolute toast toast-top toast-end z-50"></div> -->
+
+  <div id="world"></div>
+
+  <script>
+    // Toast notification system
+    function showToast(notification) {
+      const container = document.getElementById('toast-container');
+      const toast = document.createElement('div');
+
+      const typeClasses = {
+        success: 'alert-success',
+        error: 'alert-error',
+        warning: 'alert-warning',
+        info: 'alert-info'
+      };
+
+      const icons = {
+        success: `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />`,
+        error: `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />`,
+        warning: `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />`,
+        info: `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />`
+      };
+
+      toast.className = `alert ${typeClasses[notification.type] || 'alert-info'} shadow-lg animate-slide-in-right`;
+      toast.innerHTML = `
+        <div>
+          <svg class="stroke-current flex-shrink-0 w-6 h-6" fill="none" viewBox="0 0 24 24">
+            ${icons[notification.type] || icons.info}
+          </svg>
+          <div>
+            <div class="font-bold">${notification.title}</div>
+            <div class="text-sm">${notification.message}</div>
+          </div>
+        </div>
+      `;
+
+      container.appendChild(toast);
+
+      const duration = notification.duration || 3000;
+      setTimeout(() => {
+        toast.style.opacity = '0';
+        toast.style.transform = 'translateX(100%)';
+        setTimeout(() => toast.remove(), 300);
+      }, duration);
+    }
+
+    // Helper function to update stat bars (called from game.js)
+    window.updateStatBar = function (statName, value) {
+      const clampedValue = Math.max(0, Math.min(100, value));
+      const valueElement = document.getElementById(statName + '-value');
+      const barElement = document.getElementById(statName + '-bar');
+      const containerElement = document.getElementById(statName + '-container');
+
+      if (valueElement) {
+        valueElement.textContent = Math.round(clampedValue) + '/100';
+      }
+
+      if (barElement) {
+        barElement.style.width = clampedValue + '%';
+
+        // Remove existing classes
+        barElement.classList.remove('low', 'medium');
+
+        // Add appropriate class based on value
+        if (clampedValue < 25) {
+          barElement.classList.add('low'); if (containerElement)
+            containerElement.classList.add('critical');
+        } else if (clampedValue < 50) {
+          barElement.classList.add('medium'); if
+            (containerElement) containerElement.classList.remove('critical');
+        } else {
+          if (containerElement)
+            containerElement.classList.remove('critical');
+        }
+      }
+    }; // Hide game panel when game starts
+    window.hideGamePanel = function () {
+      const panel = document.getElementById('gamePanel'); if (panel)
+        panel.style.display = 'none';
+    }; // Show game panel
+    window.showGamePanel = function () {
+      const panel = document.getElementById('gamePanel');
+      if (panel) panel.style.display = 'block';
+    };
+  </script>
+</body>
+
 </html>
