feat: add sliding control and sound effect for singleplayer mode

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -94,6 +94,10 @@
         <td>Phải</td>
       </tr>
       <tr>
+        <td><strong>⬇️</strong></td>
+        <td>Trượt (Siu)</td>
+      </tr>
+      <tr>
         <td><strong>ESC</strong></td>
         <td>Dừng trò chơi</td>
       </tr>
